starting to do some basic structure for sections on the home page. Illegally sourced images ftw.

--- a/index.html
+++ b/index.html
@@ -11,15 +11,35 @@
 	<!-- Main CSS File -->
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="UTF-8">
-	<title>Yasmine Angular ToDo</title>
+	<title>Citadel San Francisco</title>
 </head>
 <body>
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row">
-			<div class="col-xs-12">
-			Hello world!
+			<div class="col-xs-12 about-section">
+				<h1>About</h1>
+				<p>
+					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+				</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-12 photo-banner">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-12 about-section">
+				<h1>Visit The Citadel</h1>
+				<p>
+					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+				</p>
 			</div>
 		</div>
 	</div>
 </body>
 </html>
+
+
+
+
+
