--- a/sources/index.html
+++ b/sources/index.html
@@ -14,8 +14,8 @@
 	<title>Citadel San Francisco</title>
 </head>
 <body>
-	<!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+<!-- Static navbar -->
+    <nav class="navbar navbar-default navbar-static-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -46,12 +46,13 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="../navbar/">Default</a></li>
-            <li><a href="../navbar-static-top/">Static top</a></li>
-            <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="./">Static top <span class="sr-only">(current)</span></a></li>
+            <li><a href="../navbar-fixed-top/">Fixed top</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
+
 
 	<div class="container-fluid">
 		<div class="row">
