start cookie stuff

--- a/sources/index.html
+++ b/sources/index.html
@@ -20,18 +20,19 @@
 
 
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="eighteen-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button> -->
-        <h4 class="modal-title" id="myModalLabel">I am over 18</h4>
+        <h4 class="modal-title" id="myTitle">I am over 18</h4>
       </div>
       <div class="modal-body">
-        This website pertains to kink, BDSM and sexuality. Please certify that you are over 18 years old to enter.
+        This website pertains to kink, BDSM and sexuality. Please certify that you are over 18 years old to enter. YES REALLY
       </div>
       <div class="modal-footer">
-        <button onClick="setCookie" type="button" class="btn btn-primary" data-dismiss="modal">I am over 18</button>
+        <button type="button" id="over-18" class="btn btn-primary" data-dismiss="modal">I am over 18</button>
+
         <a href="https://www.google.com/search?q=puppies&source=lnms&tbm=isch&sa=X&ved=0ahUKEwj7gPiT5uTOAhUUImMKHQV0DTMQ_AUICCgB&biw=1440&bih=801"><button  type="button" class="btn btn-default">Escape!</button><a/>
       </div>
     </div>
@@ -65,9 +66,6 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 about-section">
-				<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Launch demo modal
-</button>
 				<h1>About</h1>
 				<p>
 					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
