--- a/sources/index.html
+++ b/sources/index.html
@@ -84,11 +84,48 @@
 				</p>
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-xs-12 photo-carousel">
+				<div id="myCarousel" class="carousel slide" data-ride="carousel">
+					<!-- Indicators -->
+					<ol class="carousel-indicators">
+						<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+						<li data-target="#myCarousel" data-slide-to="1"></li>
+						<li data-target="#myCarousel" data-slide-to="2"></li>
+						<li data-target="#myCarousel" data-slide-to="3"></li>
+					</ol>
+
+					<!-- Wrapper for slides -->
+					<div class="carousel-inner" role="listbox">
+						<div class="item active">
+							<img src="https://thumbs.dreamstime.com/z/heart-shaped-knot-rope-isolated-white-background-50673155.jpg" alt="">
+						</div>
+
+						<div class="item">
+							<img src="https://thumbs.dreamstime.com/x/padlock-chain-18059623.jpg" alt="">
+						</div>
+
+						<div class="item">
+							<img src="https://thumbs.dreamstime.com/x/seamless-leather-texture-19209542.jpg" alt="">
+						</div>
+
+						<div class="item">
+							<img src="https://thumbs.dreamstime.com/x/woman-black-lace-mask-beautiful-over-her-eyes-33490261.jpg" alt="">
+						</div>
+					</div>
+
+					<!-- Left and right controls -->
+					<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+						<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
-
-
-
-
-
