cookies now work on the 18 and over check

--- a/sources/index.html
+++ b/sources/index.html
@@ -28,7 +28,7 @@
         <h4 class="modal-title" id="myTitle">I am over 18</h4>
       </div>
       <div class="modal-body">
-        This website pertains to kink, BDSM and sexuality. Please certify that you are over 18 years old to enter. YES REALLY
+        This website pertains to kink, BDSM and sexuality. Please certify that you are over 18 years old to enter.
       </div>
       <div class="modal-footer">
         <button type="button" id="over-18" class="btn btn-primary" data-dismiss="modal">I am over 18</button>
