--- a/sources/index.html
+++ b/sources/index.html
@@ -1,131 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
- <!-- Jquery -->
-	<script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js"></script>
-	<!-- Javascript -->
-	<script language="javascript" type="text/javascript" src="app.js"></script>
-	<!-- Bootstrap -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<head>
+	 <!-- Jquery -->
+		<script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js"></script>
+		<!-- Javascript -->
+		<script language="javascript" type="text/javascript" src="app.js"></script>
+		<!-- Bootstrap -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-	<!-- Main CSS File -->
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<meta charset="UTF-8">
-	<title>Citadel San Francisco</title>
-</head>
-<body>
-	<!-- Button trigger modal -->
+		<!-- Main CSS File -->
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<meta charset="UTF-8">
+		<title>Citadel San Francisco</title>
+	</head>
+	<body>
+		<!-- Button trigger modal -->
+
+	<!-- Modal -->
+	<div class="modal fade" id="eighteen-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	  <div class="modal-dialog" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button> -->
+	        <h4 class="modal-title" id="myTitle">I am over 18</h4>
+	      </div>
+	      <div class="modal-body">
+	        This website pertains to kink, BDSM and sexuality. Please certify that you are over 18 years old to enter.
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" id="over-18" class="btn btn-primary" data-dismiss="modal">I am over 18</button>
+
+	        <a href="https://www.google.com/search?q=puppies&source=lnms&tbm=isch&sa=X&ved=0ahUKEwj7gPiT5uTOAhUUImMKHQV0DTMQ_AUICCgB&biw=1440&bih=801"><button  type="button" class="btn btn-default">Escape!</button><a/>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
+	<div id="allContent">
+
+		<!-- Static navbar -->
+		    <nav class="navbar navbar-default navbar-static-top">
+		      <div class="container">
+		        <div class="navbar-header">
+		          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+		            <span class="sr-only">Toggle navigation</span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		          </button>
+		          <a class="navbar-brand" href="#">Citadel</a>
+		        </div>
+		        <div id="navbar" class="navbar-collapse collapse">
+		          <ul class="nav navbar-nav navbar-right">
+		            <li><a href="../navbar/">Home</a></li>
+		            <li class="active"><a href="./">Visit<span class="sr-only">(current)</span></a></li>
+		            <li><a href="../navbar-fixed-top/">Calendar</a></li>
+		          </ul>
+		        </div><!--/.nav-collapse -->
+		      </div>
+		    </nav>
 
 
-<!-- Modal -->
-<div class="modal fade" id="eighteen-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button> -->
-        <h4 class="modal-title" id="myTitle">I am over 18</h4>
-      </div>
-      <div class="modal-body">
-        This website pertains to kink, BDSM and sexuality. Please certify that you are over 18 years old to enter.
-      </div>
-      <div class="modal-footer">
-        <button type="button" id="over-18" class="btn btn-primary" data-dismiss="modal">I am over 18</button>
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-xs-12 about-section">
+						<h1>About</h1>
+						<p>
+							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+						</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-12 photo-banner">
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-12 about-section">
+						<h1>Visit The Citadel</h1>
+						<p>
+							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+						</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-12 photo-carousel">
+						<div id="myCarousel" class="carousel slide" data-ride="carousel">
+							<!-- Indicators -->
+							<ol class="carousel-indicators">
+								<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+								<li data-target="#myCarousel" data-slide-to="1"></li>
+								<li data-target="#myCarousel" data-slide-to="2"></li>
+								<li data-target="#myCarousel" data-slide-to="3"></li>
+							</ol>
 
-        <a href="https://www.google.com/search?q=puppies&source=lnms&tbm=isch&sa=X&ved=0ahUKEwj7gPiT5uTOAhUUImMKHQV0DTMQ_AUICCgB&biw=1440&bih=801"><button  type="button" class="btn btn-default">Escape!</button><a/>
-      </div>
-    </div>
-  </div>
-</div>
+							<!-- Wrapper for slides -->
+							<div class="carousel-inner" role="listbox">
+								<div class="item active">
+									<img src="https://thumbs.dreamstime.com/z/heart-shaped-knot-rope-isolated-white-background-50673155.jpg" alt="">
+								</div>
 
+								<div class="item">
+									<img src="https://thumbs.dreamstime.com/x/padlock-chain-18059623.jpg" alt="">
+								</div>
 
-<!-- Static navbar -->
-    <nav class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Citadel</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="../navbar/">Home</a></li>
-            <li class="active"><a href="./">Visit<span class="sr-only">(current)</span></a></li>
-            <li><a href="../navbar-fixed-top/">Calendar</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+								<div class="item">
+									<img src="https://thumbs.dreamstime.com/x/seamless-leather-texture-19209542.jpg" alt="">
+								</div>
 
+								<div class="item">
+									<img src="https://thumbs.dreamstime.com/x/woman-black-lace-mask-beautiful-over-her-eyes-33490261.jpg" alt="">
+								</div>
+							</div>
 
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-xs-12 about-section">
-				<h1>About</h1>
-				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-				</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-xs-12 photo-banner">
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-xs-12 about-section">
-				<h1>Visit The Citadel</h1>
-				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-				</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-xs-12 photo-carousel">
-				<div id="myCarousel" class="carousel slide" data-ride="carousel">
-					<!-- Indicators -->
-					<ol class="carousel-indicators">
-						<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-						<li data-target="#myCarousel" data-slide-to="1"></li>
-						<li data-target="#myCarousel" data-slide-to="2"></li>
-						<li data-target="#myCarousel" data-slide-to="3"></li>
-					</ol>
-
-					<!-- Wrapper for slides -->
-					<div class="carousel-inner" role="listbox">
-						<div class="item active">
-							<img src="https://thumbs.dreamstime.com/z/heart-shaped-knot-rope-isolated-white-background-50673155.jpg" alt="">
-						</div>
-
-						<div class="item">
-							<img src="https://thumbs.dreamstime.com/x/padlock-chain-18059623.jpg" alt="">
-						</div>
-
-						<div class="item">
-							<img src="https://thumbs.dreamstime.com/x/seamless-leather-texture-19209542.jpg" alt="">
-						</div>
-
-						<div class="item">
-							<img src="https://thumbs.dreamstime.com/x/woman-black-lace-mask-beautiful-over-her-eyes-33490261.jpg" alt="">
+							<!-- Left and right controls -->
+							<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+								<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+								<span class="sr-only">Previous</span>
+							</a>
+							<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+								<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+								<span class="sr-only">Next</span>
+							</a>
 						</div>
 					</div>
-
-					<!-- Left and right controls -->
-					<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-						<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
 				</div>
 			</div>
 		</div>
-	</div>
-</body>
+	</body>
 </html>
