--- a/sources/index.html
+++ b/sources/index.html
@@ -143,6 +143,91 @@
 				</p>
 			</div>
 		</div>
+        <div class="row">
+            <div class="col-xs-6">
+                <h1>Associations</h1>
+                <p>
+                    <img src="http://placehold.it/120x60">
+                    <img src="http://placehold.it/120x60">
+                    <img src="http://placehold.it/120x60">
+                    <img src="http://placehold.it/120x60">
+                    <img src="http://placehold.it/120x60">
+                    <img src="http://placehold.it/120x60">
+                    <img src="http://placehold.it/120x60">
+                    <img src="http://placehold.it/120x60">
+                    <img src="http://placehold.it/120x60">
+                    <img src="http://placehold.it/120x60">
+                </p>
+            </div>
+            <div class="col-xs-6">
+                <h1>Subscribe to updates</h1>
+                <p>
+                    <!-- Begin MailChimp Signup Form -->
+                    <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+                    <style type="text/css">
+                        #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+                        /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+                           We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+
+                    #mc_embed_signup .mc-field-group {padding: 5px 10px; !important}
+                    #mc_embed_signup .mc-field-group.input-group label {color: black;}
+
+                    </style>
+                    <div id="mc_embed_signup">
+                    <form action="//sfcitadel.us3.list-manage.com/subscribe/post?u=513db833b41b27984e48f9134&amp;id=a1f2d374f4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll">
+                        <!-- <h2>Subscribe to our mailing list</h2> -->
+                    <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                    <div class="mc-field-group">
+                        <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+                    </label>
+                        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                    </div>
+                    <div class="mc-field-group">
+                        <label for="mce-FNAME">First Name  <span class="asterisk">*</span>
+                    </label>
+                        <input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
+                    </div>
+                    <div class="mc-field-group">
+                        <label for="mce-LNAME">Last Name  <span class="asterisk">*</span>
+                    </label>
+                        <input type="text" value="" name="LNAME" class="required" id="mce-LNAME">
+                    </div>
+                    <div class="mc-field-group">
+                        <label for="mce-FETLIFE">Fetlife Alias (Optional) </label>
+                        <input type="text" value="" name="FETLIFE" class="" id="mce-FETLIFE">
+                    </div>
+                    <div class="mc-field-group size1of2">
+                        <label for="mce-BDAY-month">Date of Birth (We're Adult, must be 18+)  <span class="asterisk">*</span>
+                    </label>
+                        <div class="datefield">
+                            <span class="subfield monthfield"><input class="datepart required" type="text" pattern="[0-9]*" value="" placeholder="MM" size="2" maxlength="2" name="BDAY[month]" id="mce-BDAY-month"></span> / 
+                            <span class="subfield dayfield"><input class="datepart required" type="text" pattern="[0-9]*" value="" placeholder="DD" size="2" maxlength="2" name="BDAY[day]" id="mce-BDAY-day"></span> / 
+                            <span class="subfield yearfield"><input class="datepart required" type="text" pattern="[0-9]*" value="" placeholder="YYYY" size="4" maxlength="4" name="BDAY[year]" id="mce-BDAY-year"></span>
+                            <span class="small-meta nowrap">( mm / dd / yyyy )</span>
+                        </div>
+                    </div>
+                    <div class="mc-field-group input-group">
+                        <strong>Interested in </strong>
+                        <ul><li><input type="checkbox" value="1" name="group[12845][1]" id="mce-group[12845]-12845-0"><label for="mce-group[12845]-12845-0">Volunteering Opportunities</label></li>
+                    <li><input type="checkbox" value="2" name="group[12845][2]" id="mce-group[12845]-12845-1"><label for="mce-group[12845]-12845-1">Occasional News and items of interest to the BDSM community</label></li>
+                    </ul>
+                    </div>
+                        <div id="mce-responses" class="clear">
+                            <div class="response" id="mce-error-response" style="display:none"></div>
+                            <div class="response" id="mce-success-response" style="display:none"></div>
+                        </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <div style="position: absolute; left: -5000px;"><input type="text" name="b_513db833b41b27984e48f9134_a1f2d374f4" tabindex="-1" value=""></div>
+                        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button art-button"></div>
+                        </div>
+                    </form>
+                    </div>
+                    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='FETLIFE';ftypes[3]='text';fnames[5]='BDAY';ftypes[5]='date';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+                    <!--End mc_embed_signup-->
+                </p>
+            </div>
+        </div>
+
 	</div>
 </body>
 </html>
