--- a/sources/index.html
+++ b/sources/index.html
@@ -50,13 +50,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Citadel</a>
+          <a class="navbar-brand" href="#">
+          	<img id="top-logo" src="img/citadelLogoTransparent.png"/>
+          </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="../navbar/">Home</a></li>
-            <li class="active"><a href="./">Visit<span class="sr-only">(current)</span></a></li>
-            <li><a href="../navbar-fixed-top/">Calendar</a></li>
+            <li><a href="../navbar/">Visit</a></li>
+            <li class="active"><a href="./">Calendar<span class="sr-only">(current)</span></a></li>
+            <li><a href="../navbar-fixed-top/">Gallery</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
