--- a/sources/index.html
+++ b/sources/index.html
@@ -67,6 +67,10 @@
 
 	<div class="container-fluid">
 		<div class="row">
+			<div class="col-xs-12 splash-photo">
+			</div>
+		</div>
+		<div class="row">
 			<div class="col-xs-12 about-section">
 				<h1>About</h1>
 				<div class="col-sm-6 col-xs-12">
