--- a/sources/index.html
+++ b/sources/index.html
@@ -19,6 +19,7 @@
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="img/fav.ico/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
+	<!-- END FAVICON -->
 
  <!-- Jquery -->
 	<script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js"></script>
