--- a/sources/index.html
+++ b/sources/index.html
@@ -107,20 +107,35 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-12 photo-banner">
+				<div class="col-xs-12 dungeon-this-way">
 				</div>
 			</div>
+		
 			<div class="row">
 				<div class="col-xs-12 about-section bit">
 					<div id="bit1">
 						<h1>Visit The Citadel</h1>
-						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-						</p>
+						<div class="col-xs-12 col-sm-6">
+							<h4>What do I Need to Know?</h4>
+							<p>
+								stuff stuff stuff
+							</p>
+						<br/>
+							<h4>Transit & Neighborhood</h4>
+							<p>
+								stuff stuff stuff
+							</p>
+						</div>
+						<div class="col-sm-6 col-xs-12">
+							<!-- MAP -->
+	                		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+			                	<div style="overflow:hidden;height:300px;width:100%;"><div id="gmap_canvas" style="height:300px;width:100%;"><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="http://www.map-embed.com" id="get-map-data">embed google map</a></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:15,center:new google.maps.LatLng(37.783993,-122.4104021),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(37.783993, -122.4104021)});infowindow = new google.maps.InfoWindow({content:"<b>SF Citadel</b><br/>181 Eddy St<br/>San Francisco, CA 94103" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+			                		<div class="clearfix"></div>
+	            				</div>
+	            				<!-- END MAP -->
+	        			</div>
+						
+
 					</div>
 					<p><a id="more1">Show All</a></p>
 				</div>
@@ -166,7 +181,10 @@
 					</div>
 				</div>
 			</div>
-
+			<div class="row">
+				<div class="col-xs-12 photo-banner">
+				</div>
+			</div>
 			<div class="row">
 				<div class="col-xs-12 about-section">
 					<h1>Calendar</h1>
@@ -175,23 +193,11 @@
 					</p>
 				</div>
 			</div>
+			
 	<!-- MAP MAP MAP MAP -->
-	        <div class="row">
-	            <div class="col-sm-6 col-xs-12">
-	                <h1>Where we are</h1>
-	                <p>181 Eddy St.<br>San Francisco, CA 94103</p>
-	            </div>
-	            <div class="col-sm-6 col-xs-12">
-	                <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-	                <div style="overflow:hidden;height:300px;width:100%;"><div id="gmap_canvas" style="height:300px;width:100%;"><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="http://www.map-embed.com" id="get-map-data">embed google map</a></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:15,center:new google.maps.LatLng(37.783993,-122.4104021),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(37.783993, -122.4104021)});infowindow = new google.maps.InfoWindow({content:"<b>SF Citadel</b><br/>181 Eddy St<br/>San Francisco, CA 94103" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
-	                	<div class="clearfix"></div>
-	            	</div>
-	        	</div>
-	        </div>
-
-<!-- END END MAP MAP -->
+	        
 <!-- FOOTER FOOTER FOOTER -->
-			<div class="row">
+			<div class="row" id="footer">
 		        <div class="col-xs-6">
 		            <h1>Associations</h1>
 		            <p>
