fix merge problems

--- a/sources/index.html
+++ b/sources/index.html
@@ -146,12 +146,12 @@
 	            				</div>
 	            				<!-- END MAP -->
 	        			</div>
-						
 
 					</div>
 					<p><a id="more1">Show All</a></p>
 				</div>
 			</div>
+			<!-- IMAGE CAROUSEL -->
 			<div class="row">
 				<div class="col-xs-12 photo-carousel">
 					<div id="gallery" style="display:none;">
@@ -164,10 +164,10 @@
                     </div>
 				</div>
 			</div>
-			<div class="row">
+<!-- 			<div class="row">
 				<div class="col-xs-12 photo-banner">
 				</div>
-			</div>
+			</div> -->
 			<div class="row">
 				<div class="col-xs-12 about-section">
 					<h1>Calendar</h1>
