add photos to carousel and add the suspension photos to project

--- a/sources/index.html
+++ b/sources/index.html
@@ -155,19 +155,56 @@
 			<div class="row">
 				<div class="col-xs-12 photo-carousel">
 					<div id="gallery" style="display:none;">
-                        <img alt="Image 1 Title" src="http://placehold.it/350x150"
-                            data-image="http://placehold.it/350x150"
+                        <img alt="Image 1 Title" src="img/selectedPhotos/IMG_3401.jpg"
                             data-description="Image 1 Description">
-                        <img alt="Image 2 Title" src="http://placehold.it/350x150"
+                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3418.jpg"
+                            data-image="http://placehold.it/350x150"
+                            data-description="Image 2 Description">
+                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3441.jpg"
+                            data-image="http://placehold.it/350x150"
+                            data-description="Image 2 Description">
+                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3519.jpg"
+                            data-image="http://placehold.it/350x150"
+                            data-description="Image 2 Description">
+                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3524.jpg"
+                            data-image="http://placehold.it/350x150"
+                            data-description="Image 2 Description">
+                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3543.jpg"
+                            data-image="http://placehold.it/350x150"
+                            data-description="Image 2 Description">
+                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3544.jpg"
+                            data-image="http://placehold.it/350x150"
+                            data-description="Image 2 Description">
+                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3550.jpg"
+                            data-image="http://placehold.it/350x150"
+                            data-description="Image 2 Description">
+                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3566.jpg"
+                            data-image="http://placehold.it/350x150"
+                            data-description="Image 2 Description">
+                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3570.jpg"
+                            data-image="http://placehold.it/350x150"
+                            data-description="Image 2 Description">
+                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3571.jpg"
+                            data-image="http://placehold.it/350x150"
+                            data-description="Image 2 Description">
+                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3589.jpg"
+                            data-image="http://placehold.it/350x150"
+                            data-description="Image 2 Description">
+
+                        <img alt="Image 2 Title" src="img/selectedPhotos/suspension_1.jpg"
+                            data-image="http://placehold.it/350x150"
+                            data-description="Image 2 Description">
+                        <img alt="Image 2 Title" src="img/selectedPhotos/suspension_2.jpg"
+                            data-image="http://placehold.it/350x150"
+                            data-description="Image 2 Description">
+                        <img alt="Image 2 Title" src="img/selectedPhotos/suspension_3.jpg"
                             data-image="http://placehold.it/350x150"
                             data-description="Image 2 Description">
                     </div>
+                    </div>
 				</div>
 			</div>
-<!-- 			<div class="row">
-				<div class="col-xs-12 photo-banner">
-				</div>
-			</div> -->
+
 			<div class="row">
 				<div class="col-xs-12 about-section">
 					<h1>Calendar</h1>
