--- a/sources/index.html
+++ b/sources/index.html
@@ -21,6 +21,8 @@
 	<meta name="theme-color" content="#ffffff">
 	<!-- END FAVICON -->
 
+	<meta name="viewport" content="initial-scale=1.0">
+
 
  <!-- Jquery -->
 	<script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js"></script>
@@ -156,49 +158,50 @@
 				<div class="col-xs-12 photo-carousel">
 					<div id="gallery" style="display:none;">
                         <img alt="Image 1 Title" src="img/selectedPhotos/IMG_3401.jpg"
+                        	data-image="img/selectedPhotos/IMG_3401.jpg"
                             data-description="Image 1 Description">
                         <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3418.jpg"
-                            data-image="http://placehold.it/350x150"
+                            data-image="img/selectedPhotos/IMG_3418.jpg"
                             data-description="Image 2 Description">
                         <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3441.jpg"
-                            data-image="http://placehold.it/350x150"
+                            data-image="img/selectedPhotos/IMG_3441.jpg"
                             data-description="Image 2 Description">
                         <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3519.jpg"
-                            data-image="http://placehold.it/350x150"
+                            data-image="img/selectedPhotos/IMG_3519.jpg"
                             data-description="Image 2 Description">
                         <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3524.jpg"
-                            data-image="http://placehold.it/350x150"
+                            data-image="img/selectedPhotos/IMG_3524.jpg"
                             data-description="Image 2 Description">
                         <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3543.jpg"
-                            data-image="http://placehold.it/350x150"
+                            data-image="img/selectedPhotos/IMG_3543.jpg"
                             data-description="Image 2 Description">
                         <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3544.jpg"
-                            data-image="http://placehold.it/350x150"
+                            data-image="img/selectedPhotos/IMG_3544.jpg"
                             data-description="Image 2 Description">
                         <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3550.jpg"
-                            data-image="http://placehold.it/350x150"
+                            data-image="img/selectedPhotos/IMG_3550.jpg"
                             data-description="Image 2 Description">
                         <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3566.jpg"
-                            data-image="http://placehold.it/350x150"
+                            data-image="img/selectedPhotos/IMG_3566.jpg"
                             data-description="Image 2 Description">
                         <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3570.jpg"
-                            data-image="http://placehold.it/350x150"
+                            data-image="img/selectedPhotos/IMG_3570.jpg"
                             data-description="Image 2 Description">
                         <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3571.jpg"
-                            data-image="http://placehold.it/350x150"
+                            data-image="img/selectedPhotos/IMG_3571.jpg"
                             data-description="Image 2 Description">
                         <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3589.jpg"
-                            data-image="http://placehold.it/350x150"
+                            data-image="img/selectedPhotos/IMG_3589.jpg"
                             data-description="Image 2 Description">
 
                         <img alt="Image 2 Title" src="img/selectedPhotos/suspension_1.jpg"
-                            data-image="http://placehold.it/350x150"
+                            data-image="img/selectedPhotos/suspension_1.jpg"
                             data-description="Image 2 Description">
                         <img alt="Image 2 Title" src="img/selectedPhotos/suspension_2.jpg"
-                            data-image="http://placehold.it/350x150"
+                            data-image="img/selectedPhotos/suspension_2.jpg"
                             data-description="Image 2 Description">
                         <img alt="Image 2 Title" src="img/selectedPhotos/suspension_3.jpg"
-                            data-image="http://placehold.it/350x150"
+                            data-image="img/selectedPhotos/suspension_3.jpg"
                             data-description="Image 2 Description">
                     </div>
                     </div>
