--- a/sources/index.html
+++ b/sources/index.html
@@ -157,41 +157,41 @@
 			<div class="row">
 				<div class="col-xs-12 photo-carousel">
 					<div id="gallery" style="display:none;">
-                        <img alt="Image 1 Title" src="img/selectedPhotos/IMG_3401.jpg"
-                        	data-image="img/selectedPhotos/IMG_3401.jpg"
+                        <img alt="Image 1 Title" src="img/selectedPhotos/IMG_3401.JPG"
+                        	data-image="img/selectedPhotos/IMG_3401.JPG"
                             data-description="Image 1 Description">
-                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3418.jpg"
-                            data-image="img/selectedPhotos/IMG_3418.jpg"
+                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3418.JPG"
+                            data-image="img/selectedPhotos/IMG_3418.JPG"
                             data-description="Image 2 Description">
-                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3441.jpg"
-                            data-image="img/selectedPhotos/IMG_3441.jpg"
+                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3441.JPG"
+                            data-image="img/selectedPhotos/IMG_3441.JPG"
                             data-description="Image 2 Description">
-                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3519.jpg"
-                            data-image="img/selectedPhotos/IMG_3519.jpg"
+                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3519.JPG"
+                            data-image="img/selectedPhotos/IMG_3519.JPG"
                             data-description="Image 2 Description">
-                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3524.jpg"
-                            data-image="img/selectedPhotos/IMG_3524.jpg"
+                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3524.JPG"
+                            data-image="img/selectedPhotos/IMG_3524.JPG"
                             data-description="Image 2 Description">
-                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3543.jpg"
-                            data-image="img/selectedPhotos/IMG_3543.jpg"
+                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3543.JPG"
+                            data-image="img/selectedPhotos/IMG_3543.JPG"
                             data-description="Image 2 Description">
-                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3544.jpg"
-                            data-image="img/selectedPhotos/IMG_3544.jpg"
+                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3544.JPG"
+                            data-image="img/selectedPhotos/IMG_3544.JPG"
                             data-description="Image 2 Description">
-                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3550.jpg"
-                            data-image="img/selectedPhotos/IMG_3550.jpg"
+                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3550.JPG"
+                            data-image="img/selectedPhotos/IMG_3550.JPG"
                             data-description="Image 2 Description">
-                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3566.jpg"
-                            data-image="img/selectedPhotos/IMG_3566.jpg"
+                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3566.JPG"
+                            data-image="img/selectedPhotos/IMG_3566.JPG"
                             data-description="Image 2 Description">
-                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3570.jpg"
-                            data-image="img/selectedPhotos/IMG_3570.jpg"
+                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3570.JPG"
+                            data-image="img/selectedPhotos/IMG_3570.JPG"
                             data-description="Image 2 Description">
-                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3571.jpg"
-                            data-image="img/selectedPhotos/IMG_3571.jpg"
+                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3571.JPG"
+                            data-image="img/selectedPhotos/IMG_3571.JPG"
                             data-description="Image 2 Description">
-                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3589.jpg"
-                            data-image="img/selectedPhotos/IMG_3589.jpg"
+                        <img alt="Image 2 Title" src="img/selectedPhotos/IMG_3589.JPG"
+                            data-image="img/selectedPhotos/IMG_3589.JPG"
                             data-description="Image 2 Description">
 
                         <img alt="Image 2 Title" src="img/selectedPhotos/suspension_1.jpg"
