--- a/sources/index.html
+++ b/sources/index.html
@@ -164,63 +164,55 @@
 
         <div class="row">
             <div class="col-xs-12 about-section">
-                <div id="bit1" class="bit">
+                <div>
                     <h1>Visit The Citadel</h1>
 
                     <div class="col-xs-12 col-sm-6">
-                        <h4>What do I Need to Know?</h4>
+                        <!--Pulled/rewritten from the current website-->
+                        <h4>The SF Citadel is located at:</h4>
 
-                        <p>
-                            stuff stuff stuff
+                        <p>181 Eddy Street (Between Mason and Taylor Streets)<br/>
+                            San Francsico, CA. 94102
                         </p>
                         <br/>
-                        <h4>Transit & Neighborhood</h4>
 
                         <p>
-                            stuff stuff stuff
+                            Our building is in the heart of downtown, one block from both the Parc 55 Hotel and the Hilton, and three blocks from Union Square.
+                        </p>
+                        <h4>Parking</h4>
+                        <p>
+                            There are many nearby parking locations, and some are open 24 hours. <br/>
+                            The lot a few steps down the street directly to the east will stay open for events. <br/>
+                            Street parking is available as well, however as this is San Francisco, a reminder....  leave nothing in your car. No matter where you park in SF, if you leave anything in your car, someone will want it!
+                            A map of parking lots can be found on <a href="http://www.yelp.com/search?find_desc=parking+lots&find_loc=181+Eddy+St%2C+san+Francisco%2C+ca+94102&ns=1&ls=1a9bfbaedb66b43d">here on Yelp</a>.
+                        </p>
+                        <h4>Public Transit</h4>
+                        <p>
+                            The Powell street BART station is roughly two blocks East on Market street <br/>
+                            The Muni F line is roughly two blocks away on Market street  There are a large number of buses that stop at the Market and 5th street stations.<br/>
+                            The 31 Bus line runs directly down Eddy street. <br/>
+                        </p>
+                        <h4>Accessibility:</h4>
+                        <p>
+                            Unfortunately, the SFCitadel is not wheelchair accessible as we are located on the second floor with no elevator or lift.
                         </p>
                     </div>
                     <div class="col-sm-6 col-xs-12">
                         <!-- MAP -->
-                        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-                        <div style="overflow:hidden;height:300px;width:100%;">
-                            <div id="gmap_canvas" style="height:300px;width:100%;">
-                                <style>#gmap_canvas img {
-                                    max-width: none !important;
-                                    background: none !important
-                                }</style>
-                                <a class="google-map-code" href="http://www.map-embed.com" id="get-map-data">embed
-                                    google map</a></div>
-                            <script type="text/javascript"> function init_map() {
-                                var myOptions = {
-                                    zoom: 15,
-                                    center: new google.maps.LatLng(37.783993, -122.4104021),
-                                    mapTypeId: google.maps.MapTypeId.ROADMAP
-                                };
-                                map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);
-                                marker = new google.maps.Marker({
-                                    map: map,
-                                    position: new google.maps.LatLng(37.783993, -122.4104021)
-                                });
-                                infowindow = new google.maps.InfoWindow({content: "<b>SF Citadel</b><br/>181 Eddy St<br/>San Francisco, CA 94103"});
-                                google.maps.event.addListener(marker, "click", function () {
-                                    infowindow.open(map, marker);
-                                });
-                                infowindow.open(map, marker);
-                            }
-                            google.maps.event.addDomListener(window, 'load', init_map);</script>
-                            <div class="clearfix"></div>
+                        <div style="height:500px;width:100%;">
+                            <iframe width="100%" height=100%" frameborder="0" style="border:0"
+                                    src="https://www.google.com/maps/embed/v1/place?q=SF+Citadel&key=AIzaSyCo6oCc74iNsC1fsWiYBEnE2xUeQTD25wI"
+                                    allowfullscreen></iframe>
                         </div>
                         <!-- END MAP -->
                     </div>
 
                 </div>
-                <p class="more"><a id="more1">Show All</a></p>
             </div>
         </div>
         <!-- IMAGE CAROUSEL -->
         <div class="row">
-            <div class="col-xs-12 photo-carousel">
+            <div class="photo-carousel">
                 <div id="gallery" style="display:none;">
                     <img alt="Image 1 Title" src="img/selectedPhotos/IMG_3401.JPG"
                          data-image="img/selectedPhotos/IMG_3401.JPG"
